# Esp32_paletizador

./: .gitignore  GUIA_MICRO_ROS.md  README.md  manual_mks_can.txt  package-lock.json  platformio.ini
docs/: GUIA_INICIO_SISTEMA.md  GUIA_MICRO_ROS.md  GUIA_MODELO_3D_REACT.md  GUIA_UI_REACT.md  NODO_PALETIZADOR_ESP32.md  README.md
extra_packages/palletizer_msgs/: CMakeLists.txt  package.xml
extra_packages/palletizer_msgs/action/: GoOrigin.action  HomeAxis.action  MoveXYZ.action
extra_packages/palletizer_msgs/srv/: EnableAxis.srv  GetDriverStatus.srv  ReleaseStall.srv  SetGripper.srv  SetZero.srv
src/: Esp32_paletizador.code-workspace  config.h  machine.cpp  machine.h  main.cpp  mks_can.cpp  mks_can.h  robot_tasks.cpp  robot_tasks.h  ros_bridge.cpp  ros_bridge.h  serial_commands.cpp
tools/: launch_palletizer.sh  paletizador_ui.py
ui/: GUIA_MODELO_3D_REACT.md  README.md
ui/backend/: README.md  package.xml  setup.cfg  setup.py
ui/backend/palletizer_ui_backend/: __init__.py  server.py
ui/backend/resource/: palletizer_ui_backend
ui/frontend/: README.md  index.html  package-lock.json  package.json
ui/frontend/public/robot_description/: README.md
ui/frontend/src/: App.tsx  react-dom-client.d.ts  three-jsx.d.ts
ui/frontend/src/components/: EventLog.tsx  HomingControls.tsx  JogControl.tsx  JointStatePanel.tsx  MotorStateDrawer.tsx  MoveControl.tsx  NodeInterfacesPanel.tsx  SafetyPanel.tsx  ServiceControls.tsx  StatusBar.tsx  SystemSummary.tsx  TelemetryPanel.tsx
ui/frontend/src/hooks/: usePalletizerSocket.ts
ui/launch/: palletizer_ui.launch.py
(+10 files in other folders)
