<?xml version="1.0"?>
<package format="3">
  <name>palletizer_ui_backend</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge between the ESP32 palletizer node and the React dashboard.</description>
  <maintainer email="felipe@example.com">felipe</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>palletizer_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
